--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     
     <link rel="stylesheet" href="custom.css">
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </head>
 <body>
     <button class="share-button" aria-label="Share" id="shareButton">
